# vmmc

./: .gitignore  Cargo.toml  README.md  user_guide.md
configs/: example_pressure_config.toml  hexagon_example.toml  short.toml  square_example.toml  triangle_example.toml
configs/2v_tilings/: 2v_1.toml  2v_12.toml  2v_13.toml  2v_15.toml  2v_17.toml  2v_17_copy.toml  2v_19.toml  2v_2.toml  2v_3.toml  2v_4.toml  2v_5.toml  2v_6.toml  2v_7.toml  2v_8.toml
configs/semiregular/: tiling_31212.toml  tiling_33336.toml  tiling_33344.toml  tiling_33434.toml  tiling_3464.toml  tiling_3636.toml  tiling_4612.toml  tiling_488.toml
scripts/: triangle.sh
src/: chemical_potential.rs  cli.rs  collision_detection.rs  consts.rs  evo_vmmc.rs  io.rs  lib.rs  magnet.rs  morphology.rs  out.patch  params.rs  particle.rs  patchy_discs.rs  polygons.rs  position.rs  pressure.rs  protocol.rs  simbox.rs  stats.rs  tiling.rs  types.rs  vmmc.rs
src/potentials/: gradated_patches.rs  mod.rs  patchy_discs.rs
src/tilings/: mod.rs  regular_tilings.rs  semiregular_tilings.rs  two_vertex_tilings.rs  util.rs
tests/: tests.rs
