[package]
name = "vmmc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vmmc-run"
path = "src/bin/vmmc_run.rs"

[dependencies]
anyhow = "1.0.75" # better errors
clap = { version = "4.4.6", features = ["derive"] } # commandline parsing
env_logger = "0.10.0"
log = "0.4.20"
quickcheck = "1.0.3"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
raqote = "0.8.3"
