[package]
name = "vmmc"
version = "0.1.0"
edition = "2021"


[profile.release]
lto = "thin" # use "fat" if we need to eek out another 2%

[[bin]]
name = "vmmc-run"
path = "src/bin/vmmc_run.rs"

[dependencies]
anyhow = "1.0.75" # better errors
clap = { version = "4.4.6", features = ["derive"] } # commandline parsing
env_logger = "0.10.0"
equationx = "0.1.0"
log = "0.4.20"
plotters = "0.3.5"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
raqote = "0.8.3"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
xyzvec = "0.1.8"



